src/objects/WorkTimeDefine__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>終業規則の関連定義</description>
    <fields>
        <fullName>DayOfRegularWorkTime__c</fullName>
        <defaultValue>480</defaultValue>
        <inlineHelpText>1日所定労働時間(時単位)
例：7時30分の場合、定義情報は 7 * 60 + 30 = 450 で定義値に設定する</inlineHelpText>
        <label>1日所定労働時間(分単位)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LateNightEndTime__c</fullName>
        <defaultValue>&quot;05:00&quot;</defaultValue>
        <inlineHelpText>深夜残業終了時間 書式： HH:MM 
例：5時まで深夜残業を定義したい場合、「05：00」で設定する</inlineHelpText>
        <label>深夜残業終了時間（HH:MM)</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LateNightStartTime__c</fullName>
        <defaultValue>&quot;22:00&quot;</defaultValue>
        <inlineHelpText>深夜残業開始時間 書式： HH:MM 
例：22時から深夜残業を定義したい場合、「22：00」で設定する</inlineHelpText>
        <label>深夜残業開始時間（HH:MM)</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShopCode__c</fullName>
        <externalId>true</externalId>
        <label>店舗コード</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>終業規則</label>
</CustomObject>